--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="#about">About</a>
               </div>
         <a href="https://louisvilleky.gov/government/jefferson-memorial-forest">
-            <img class="header" src="https://louisvilleky.gov/sites/default/files/jefferson_memorial_forest/header_images/jmf-header_0.jpg" with="50%" alt="What The F*%#" title="What The F*%#" align="middle">
+            <img class="header" src="https://louisvilleky.gov/sites/default/files/jefferson_memorial_forest/header_images/jmf-header_0.jpg" with="50%" alt="Jefferson Memorial Forest" title="Jefferson Memorial Forest" align="middle">
                  </a>
     <p>Jefferson Memorial Forest has trails for every skill level.  Use the form below to find your preferred trail.</p>
 
