--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>Jefferson Memorial Forest has trails for every skill level.  Use the form below to find your preferred trail.</p>
 
     <div class="container">
-            <img src="https://github.com/CGivan15/CGivan15.github.io/blob/master/8RFCEGZx.jpeg" alt="Picture" style="width:40%;">
+            <img src="https://github.com/CGivan15/CGivan15.github.io/blob/master/8RFCEGZx.jpeg?raw=true" alt="Picture" style="width:40%;">
             <!-- <div class="content"> -->
               <!-- <h1>Heading</h1>
               <p>I look good.</p> -->
