Updated JMF image address

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                     <!-- link to official forest website when image is clicked-->
                     <a href="https://louisvilleky.gov/government/jefferson-memorial-forest">
-                        <img class="main-header" src="https://louisvilleky.gov/sites/default/files/jefferson_memorial_forest/header_images/jmf-header_0.jpg" width="100%" alt="Jefferson Memorial Forest" title="Jefferson Memorial Forest" align="middle">
+                        <img class="main-header" src="https://louisvilleky.gov/sites/default/files/styles/banner_frontpage/public/jefferson_memorial_forest/banner-jmf-spring-2019.jpg?itok=6yzXI8FO" width="100%" alt="Jefferson Memorial Forest" title="Jefferson Memorial Forest" align="middle">
                     <!-- <script>appear(document.getElementsByTagName('img1')[0], 0, 5, 400);</script> -->
                     </a>
 
